<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/editTextTextSize"
            android:textStyle="bold"
            android:text="@string/how_much_did_you_sleep_last_night"/>
        <EditText
            android:id="@+id/sleep_hours_edit_text"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/editTextTextSize"
            android:textStyle="bold"
            android:text="How do you feel(scale of 1 - 10)"/>
        <EditText
            android:id="@+id/feeling_edit_text"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="5"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/any_other_notes"
        android:textStyle="bold"
        android:textSize="@dimen/editTextTextSize"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/note_feeling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:hint="Note"/>

    <Button
        android:id="@+id/date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/draw_a_rectangle"
        android:text="@string/date"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/save_options_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/draw_a_rectangle"
        android:text="@string/save"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>